--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <nav>
     <a href="index.html">Início</a>
-    <a href="noticias.html">Notícias</a>
+    <a href="noticias.html">Curiosidades</a>
     <a href="artigos.html">Artigos</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -59,11 +59,10 @@
     <p>
       Este é um trabalho de <strong>Língua Portuguesa</strong> sobre 
       <em>fotos impactantes do jornalismo</em>.<br><br>
-      Desenvolvido por <strong>Artur Lazzari Vieira</strong> e 
-      <strong>Ana Laura Batisti</strong>, nosso objetivo é mostrar como a fotografia 
-      jornalística pode marcar a história e a memória coletiva.
+      Desenvolvido por <strong>Artur Lazzari Vieira</strong>, o objetivo é mostrar como a fotografia 
+      jornalística pode impactar a história.
     </p>
-    <p>Aproveite a leitura e descubra histórias que desafiam o tempo!</p>
+    <p>Aproveite a leitura!</p>
     <a href="artigos.html" class="btn">Ver Artigos</a>
   </div>
 
@@ -72,3 +71,4 @@
   </footer>
 </body>
 </html>
+
