--- a/artigos.html
+++ b/artigos.html
@@ -14,7 +14,7 @@
 
   <nav>
     <a href="index.html">Início</a>
-    <a href="noticias.html">Notícias</a>
+    <a href="noticias.html">Curiosidades</a>
     <a href="artigos.html">Artigos</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -646,4 +646,5 @@ Portanto, o fotojornalismo mantém papel crucial no acesso à verdade, na docume
     <p>O OBSERVADOR © 2025 — Documentários sobre História</p>
   </footer>
 </body>
+
 </html>
