--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
 
   <nav>
     <a href="index.html">Início</a>
-    <a href="noticias.html">Notícias</a>
+    <a href="noticias.html">Curiosidades</a>
     <a href="artigos.html">Artigos</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -36,3 +36,4 @@
   </footer>
 </body>
 </html>
+
