--- a/noticias.html
+++ b/noticias.html
@@ -19,7 +19,7 @@
 
   <nav>
     <a href="index.html">Início</a>
-    <a href="noticias.html">Notícias</a>
+    <a href="noticias.html">Curiosidades</a>
     <a href="artigos.html">Artigos</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -6039,3 +6039,4 @@
   </footer>
 </body>
 </html>
+
