--- a/artigos.html
+++ b/artigos.html
@@ -22,7 +22,7 @@
   <div class="container">
     <h1>Fotos Impactantes do Jornalismo</h1>
     <p style="text-align:center; font-style:italic;">
-      Trabalho de Artur Lazzari Vieira e Ana Laura Batisti
+      Trabalho de Artur Lazzari Vieira
     </p>
 
     <!-- 11 DE SETEMBRO -->
@@ -648,3 +648,4 @@ Portanto, o fotojornalismo mantém papel crucial no acesso à verdade, na docume
 </body>
 
 </html>
+
